feat: validation implemented

--- a/form-style.css
+++ b/form-style.css
@@ -79,3 +79,22 @@ h1 {
   cursor: pointer;
   color: #fff;
 }
+
+.button-block {
+  display: inline-block;
+  position: relative;
+  width: 450px;
+}
+
+.disabled-button-block {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.info {
+  font-family: Fredoka;
+  text-align: center;
+}
